Reporting fixes and concepts

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li class="dfe-vertical-nav__section-item @(ViewData["ActiveNavItem"]?.ToString() == "manage-metrics" ? "dfe-vertical-nav__section-item--current" : "")">
-                            <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Index", "AdminMetrics")">
+                            <a class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="@Url.Action("Index", "AdminPerformanceMetrics")">
                                 Manage metrics
                             </a>
                         </li>
