--- a/Views/Admin/PerformanceMetrics/Index.cshtml
+++ b/Views/Admin/PerformanceMetrics/Index.cshtml
@@ -13,8 +13,7 @@
                 <div class="govuk-grid-column-full">
                     <span class="govuk-caption-l govuk-!-margin-top-6">COMPASS admin</span>
                     <h1 class="govuk-heading-xl">Manage metrics</h1>
-                    <p class="govuk-body-l govuk-!-margin-bottom-0">Monitor and manage performance metrics across all services.</p>
-                </div>
+                    </div>
             </div>
         </div>
     </div>
@@ -56,7 +55,7 @@
                     <div class="govuk-grid-column-two-thirds">
                         <div class="govuk-form-group">
                             <label class="govuk-label" for="metrics-search">Search metrics</label>
-                            <input class="govuk-input" id="metrics-search" name="search" type="text" placeholder="Search by name or FIPS ID...">
+                            <input class="govuk-input" id="metrics-search" name="search" type="text" placeholder="Search by name or reference">
                         </div>
                     </div>
                     <div class="govuk-grid-column-one-third">
@@ -106,7 +105,7 @@
                                             </tr>
                                         </thead>
                                         <tbody class="govuk-table__body">
-                                            @foreach (var metric in Model.Metrics)
+                                            @foreach (var metric in Model.Metrics.OrderBy(m => m.Category).ThenBy(m => m.Name))
                                             {
                                                 <tr class="govuk-table__row" data-mandate="@metric.Mandate.ToLower()" data-name="@metric.Name.ToLower()" data-fips="@metric.FipsId.ToLower()">
                                                     <td class="govuk-table__cell">
