--- a/Views/Reporting/Index.cshtml
+++ b/Views/Reporting/Index.cshtml
@@ -7,14 +7,13 @@
 }
 
 @section BeforeContent {
-    <div class="dfe-masthead dfe-masthead--with-links">
+    <div class="dfe-masthead">
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <span class="govuk-caption-l govuk-!-margin-top-6">COMPASS reporting</span>
-                    <h1 class="govuk-heading-xl">Dashboard</h1>
-                    <p class="govuk-body-l govuk-!-margin-bottom-0">Complete your service performance returns and milestone updates for governance reporting.</p>
-                </div>
+                    <span class="govuk-caption-l">COMPASS reporting</span>
+                    <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">Dashboard</h1>
+                      </div>
             </div>
         </div>
     </div>
@@ -148,7 +147,7 @@
                                             var dueDate = monthDate.AddMonths(1).AddDays(6);
                                             <tr class="govuk-table__row">
                                                 <td class="govuk-table__cell">
-                                                    <a href="/reporting/@year/@monthName.ToLower()" class="govuk-link">
+                                                    <a href="/reporting/@year/@monthName.ToLower()/performance/view" class="govuk-link">
                                                         @fullMonthName
                                                     </a>
                                                     <div class="govuk-body-s govuk-!-margin-bottom-0">@periodDisplay</div>
