--- a/Views/Reporting/Month.cshtml
+++ b/Views/Reporting/Month.cshtml
@@ -20,8 +20,8 @@
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                     <span class="govuk-caption-l govuk-!-margin-top-6">Performance reporting</span>
-                <h1 class="govuk-heading-xl">@Model.FullMonthName</h1>
+                     <span class="govuk-caption-l govuk-!-margin-top-8">Performance reporting</span>
+                <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">@Model.FullMonthName</h1>
                     <table class="govuk-table govuk-!-margin-bottom-0">
                         <thead class="govuk-table__head">
                             <tr class="govuk-table__row">
@@ -85,59 +85,14 @@
                     <ul class="dfe-vertical-nav__section">
                         <li class="dfe-vertical-nav__section-item">
                            
-                            <a href="@Url.Action("Index", "Reporting")" class="govuk-back-link govuk-!-margin-top-0">
-                                Back to reports
+                            <a href="@Url.Action("Performance", "Reporting")" class="govuk-back-link govuk-!-margin-top-0">
+                                Back to reporting
                             </a>
                         </li>
                     </ul>
                 </nav>
                 
-                <nav class="dfe-vertical-nav nav-margin-top">
-                    <h3 class="dfe-vertical-nav__title">Active and overdue reports</h3>
-                    <ul class="dfe-vertical-nav__section">
-                        @foreach (var period in Model.ReportingPeriods.Where(p => p.Status == "Overdue"))
-                        {
-                            var year = period.DueDate.Year;
-                            var month = period.Month.Split(' ')[0].ToLower();
-                            <li class="dfe-vertical-nav__section-item @(period.Month == Model.FullMonthName ? "dfe-vertical-nav__section-item--current" : "")">
-                                <a href="@Url.Action("Month", "Reporting", new { year = year, month = month })" class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline">
-                                    @period.Month
-                                </a>
-                            </li>
-                        }
-                    </ul>
-                </nav>
-
-                <nav class="dfe-vertical-nav nav-margin-top">
-                    <h3 class="dfe-vertical-nav__title">Upcoming reports</h3>
-                    <ul class="dfe-vertical-nav__section">
-                        @foreach (var period in Model.ReportingPeriods.Where(p => p.Status == "Upcoming"))
-                        {
-                            var year = period.DueDate.Year;
-                            var month = period.Month.Split(' ')[0].ToLower();
-                            <li class="dfe-vertical-nav__section-item @(period.Month == Model.FullMonthName ? "dfe-vertical-nav__section-item--current" : "")">
-                                <a href="@Url.Action("Month", "Reporting", new { year = year, month = month })" class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline">
-                                    @period.Month
-                                </a>
-                            </li>
-                        }
-                    </ul>
-                </nav>
-
-                <nav class="dfe-vertical-nav nav-margin-top">
-                    <h3 class="dfe-vertical-nav__title">Submitted reports</h3>
-                    <ul class="dfe-vertical-nav__section">
-                        <li class="dfe-vertical-nav__section-item">
-                            <a href="#" class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline">July 2025</a>
-                        </li>
-                        <li class="dfe-vertical-nav__section-item">
-                            <a href="#" class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline">June 2025</a>
-                        </li>
-                        <li class="dfe-vertical-nav__section-item">
-                            <a href="#" class="dfe-vertical-nav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline">May 2025</a>
-                        </li>
-                    </ul>
-                </nav>
+             
             </div>
 
             <!-- Main Content -->
