--- a/Views/Reporting/SubmittedReturns.cshtml
+++ b/Views/Reporting/SubmittedReturns.cshtml
@@ -97,7 +97,7 @@
                             var dueDate = monthDate.AddMonths(1).AddDays(6);
                             <tr class="govuk-table__row">
                                 <td class="govuk-table__cell">
-                                    <a href="/reporting/@year/@monthName.ToLower()" class="govuk-link">
+                                    <a href="/reporting/@year/@monthName.ToLower()/performance/view" class="govuk-link">
                                         @fullMonthName
                                     </a>
                                     <div class="govuk-body-s govuk-!-margin-bottom-0">@periodDisplay</div>
