--- a/Views/Reporting/performance/Performance.cshtml
+++ b/Views/Reporting/performance/Performance.cshtml
@@ -7,18 +7,18 @@
 }
 
 @section BeforeContent {
-    <div class="dfe-masthead dfe-masthead--with-links">
+    <div class="dfe-masthead">
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <span class="govuk-caption-l govuk-!-margin-top-6">COMPASS reporting</span>
-                    <h1 class="govuk-heading-xl">Performance reporting</h1>
-                    <p class="govuk-body-l govuk-!-margin-bottom-0">Complete your monthly performance returns for governance reporting.</p>
-                </div>
+                    <span class="govuk-caption-l">COMPASS reporting</span>
+                    <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">Performance reporting</h1>
+                      </div>
             </div>
         </div>
     </div>
 }
+
 
 
         <div class="govuk-grid-row">
@@ -61,82 +61,139 @@
 
                 @if (Model.ReportingPeriods.Any())
                 {
-                   
-
-                          <table class="govuk-table">
-                                    <thead class="govuk-table__head">
-                                        <tr class="govuk-table__row">
-                                            <th scope="col" class="govuk-table__header">Task</th>
-                                            <th scope="col" class="govuk-table__header">Due by</th>
-                                            <th scope="col" class="govuk-table__header">Status</th>
-
-                                            <th scope="col" class="govuk-table__header">Progress</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody class="govuk-table__body">
-                                        @foreach (var period in Model.ReportingPeriods.Where(p => p.Status != "Submitted").OrderBy(p => p.DueDate))
-                                        {
+                    <!-- Upcoming Section -->
+                    var upcomingPeriods = Model.ReportingPeriods.Where(p => p.Status == "Due Soon").OrderBy(p => p.DueDate);
+                    @if (upcomingPeriods.Any())
+                    {
+                        <div class="govuk-grid-row govuk-!-margin-top-6">
+                            <div class="govuk-grid-column-full">
+                                <h3 class="govuk-heading-m">Upcoming</h3>
+                                <div class="govuk-table-container">
+                                    <table class="govuk-table">
+                                        <thead class="govuk-table__head">
                                             <tr class="govuk-table__row">
-                                                <td class="govuk-table__cell">
-                                                    <a href="/reporting/@period.DueDate.Year/@period.Month.Split(' ')[0].ToLower()" class="govuk-link">
-                                                       @period.Month
-                                                    </a>
-                                                    <div class="govuk-body-s govuk-!-margin-bottom-0">@period.Period</div>
-                                                </td>
-                                                <td class="govuk-table__cell">
-                                                    @period.DueDate.ToString("dd MMM yyyy")
-                                                </td>
-                                                <td class="govuk-table__cell">
-                                                    @if (period.Status == "Overdue")
-                                                    {
-                                                        <span class="govuk-tag govuk-tag--red">Overdue</span>
-                                                    }
-                                                    else if (period.Status == "Due")
-                                                    {
-                                                        <span class="govuk-tag govuk-tag--yellow">Due</span>
-                                                    }
-                                                    else if (period.Status == "Submitted")
-                                                    {
-                                                        <span class="govuk-tag govuk-tag--green">Submitted</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span class="govuk-tag govuk-tag--grey">@period.Status</span>
-                                                    }
-                                                </td>
-                                                <td class="govuk-table__cell">
-                                                    @if (period.Status != "Submitted")
-                                                    {
-                                                        <div class="govuk-grid-row">
-                                                            <div class="govuk-grid-column-two-thirds">
-                                                                <div class="govuk-progress-bar">
-                                                                    <div class="govuk-progress-bar__bar" style="width: 0%"></div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="govuk-grid-column-one-third">
-                                                                <span class="govuk-body-s">0/0</span>
-                                                            </div>
-                                                        </div>
-                                                    }
-                                                    else
-                                                    {
-                                                        <div class="govuk-grid-row">
-                                                            <div class="govuk-grid-column-two-thirds">
-                                                                <div class="govuk-progress-bar">
-                                                                    <div class="govuk-progress-bar__bar" style="width: 100%"></div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="govuk-grid-column-one-third">
-                                                                <span class="govuk-body-s">Complete</span>
-                                                            </div>
-                                                        </div>
-                                                    }
-                                                </td>
+                                                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Task</th>
+                                                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Due by</th>
+                                                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Status</th>
                                             </tr>
-                                        }
-                                    </tbody>
-                                </table>
-                  
+                                        </thead>
+                                        <tbody class="govuk-table__body">
+                                            @foreach (var period in upcomingPeriods)
+                                            {
+                                                <tr class="govuk-table__row">
+                                                    <td class="govuk-table__cell">
+                                                        <a href="/reporting/@period.DueDate.Year/@period.Month.Split(' ')[0].ToLower()" class="govuk-link">
+                                                           @period.Month
+                                                        </a>
+                                                        <div class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-padding-top-0">@period.Period</div>
+                                                    </td>
+                                                    <td class="govuk-table__cell">
+                                                        @period.DueDate.ToString("dd MMM yyyy")
+                                                    </td>
+                                                    <td class="govuk-table__cell">
+                                                        <span class="govuk-tag govuk-tag--yellow">Due Soon</span>
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    }
+
+                    <!-- Due/Overdue Section -->
+                    var dueOverduePeriods = Model.ReportingPeriods.Where(p => p.Status == "Due" || p.Status == "Overdue").OrderBy(p => p.DueDate);
+                    @if (dueOverduePeriods.Any())
+                    {
+                        <div class="govuk-grid-row govuk-!-margin-top-6">
+                            <div class="govuk-grid-column-full">
+                                <h3 class="govuk-heading-m">Due/Overdue</h3>
+                                <div class="govuk-table-container">
+                                    <table class="govuk-table">
+                                        <thead class="govuk-table__head">
+                                            <tr class="govuk-table__row">
+                                                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Task</th>
+                                                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Due by</th>
+                                                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody class="govuk-table__body">
+                                            @foreach (var period in dueOverduePeriods)
+                                            {
+                                                <tr class="govuk-table__row">
+                                                    <td class="govuk-table__cell">
+                                                        <a href="/reporting/@period.DueDate.Year/@period.Month.Split(' ')[0].ToLower()" class="govuk-link">
+                                                           @period.Month
+                                                        </a>
+                                                        <div class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-padding-top-0">@period.Period</div>
+                                                    </td>
+                                                    <td class="govuk-table__cell">
+                                                        @period.DueDate.ToString("dd MMM yyyy")
+                                                    </td>
+                                                    <td class="govuk-table__cell">
+                                                        @if (period.Status == "Overdue")
+                                                        {
+                                                            <span class="govuk-tag govuk-tag--red">Overdue</span>
+                                                        }
+                                                        else if (period.Status == "Due")
+                                                        {
+                                                            <span class="govuk-tag govuk-tag--yellow">Due</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span class="govuk-tag govuk-tag--grey">@period.Status</span>
+                                                        }
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    }
+
+                    <!-- Submitted Section -->
+                    var submittedPeriods = Model.ReportingPeriods.Where(p => p.Status == "Submitted").OrderByDescending(p => p.DueDate);
+                    @if (submittedPeriods.Any())
+                    {
+                        <div class="govuk-grid-row govuk-!-margin-top-6">
+                            <div class="govuk-grid-column-full">
+                                <h3 class="govuk-heading-m">Submitted</h3>
+                                <div class="govuk-table-container">
+                                    <table class="govuk-table">
+                                        <thead class="govuk-table__head">
+                                            <tr class="govuk-table__row">
+                                                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Task</th>
+                                                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Due by</th>
+                                                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody class="govuk-table__body">
+                                            @foreach (var period in submittedPeriods)
+                                            {
+                                                <tr class="govuk-table__row">
+                                                    <td class="govuk-table__cell">
+                                                        <a href="/reporting/@period.DueDate.Year/@period.Month.Split(' ')[0].ToLower()/performance/view" class="govuk-link">
+                                                           @period.Month
+                                                        </a>
+                                                        <div class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-padding-top-0">@period.Period</div>
+                                                    </td>
+                                                    <td class="govuk-table__cell">
+                                                        @period.DueDate.ToString("dd MMM yyyy")
+                                                    </td>
+                                                    <td class="govuk-table__cell">
+                                                        <span class="govuk-tag govuk-tag--green">Submitted</span>
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    }
                 }
                 else
                 {
