--- a/Views/Reporting/Products/Index.cshtml
+++ b/Views/Reporting/Products/Index.cshtml
@@ -6,18 +6,18 @@
 }
 
 @section BeforeContent {
-    <div class="dfe-masthead dfe-masthead--with-links">
+    <div class="dfe-masthead">
         <div class="govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <span class="govuk-caption-l govuk-!-margin-top-6">COMPASS reporting</span>
-                    <h1 class="govuk-heading-xl">Your products</h1>
-                    <p class="govuk-body-l govuk-!-margin-bottom-0">Services you are responsible for reporting on.</p>
-                </div>
+                    <span class="govuk-caption-l">COMPASS reporting</span>
+                    <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">Your products</h1>
+                      </div>
             </div>
         </div>
     </div>
 }
+
 
 
         <div class="govuk-grid-row">
@@ -53,7 +53,7 @@
             <div class="govuk-grid-column-three-quarters">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        <h2 class="govuk-heading-l">Assigned Services</h2>
+                        <h2 class="govuk-heading-l">Assigned products</h2>
                         <p class="govuk-body">You are responsible for reporting on @Model.Count() service(s).</p>
                     </div>
                 </div>
@@ -66,7 +66,6 @@
                                 <tr class="govuk-table__row">
                                     <th scope="col" class="govuk-table__header">Service</th>
                                     <th scope="col" class="govuk-table__header">Milestones</th>
-                                    <th scope="col" class="govuk-table__header">Performance Status</th>
                                 </tr>
                             </thead>
                             <tbody class="govuk-table__body">
@@ -75,16 +74,13 @@
                                     <tr class="govuk-table__row">
                                         <td class="govuk-table__cell">
                                             <a href="@Url.Action("Details", "ReportingProducts", new { id = product.FipsId })" class="govuk-link">
-                                                <strong>@product.Title</strong>
+                                                @product.Title
                                             </a>
                                             <br>
                                             <span class="govuk-body-s">@product.FipsId</span>
                                         </td>
                                         <td class="govuk-table__cell">
-                                            <span class="govuk-body-s">0 milestones</span>
-                                        </td>
-                                        <td class="govuk-table__cell">
-                                            <span class="govuk-tag govuk-tag--green">On time</span>
+                                            <span class="govuk-body-s">@product.MilestoneCount</span>
                                         </td>
                                     </tr>
                                 }
