--- a/Views/Reporting/performance/PerformanceByMonth.cshtml
+++ b/Views/Reporting/performance/PerformanceByMonth.cshtml
@@ -11,9 +11,8 @@
         <div class="govuk-width-container">
                 <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                    <span class="govuk-caption-l govuk-!-margin-top-6">COMPASS reporting</span>
-                    <h1 class="govuk-heading-xl">Performance reporting - @ViewBag.Month @ViewBag.Year</h1>
-                    <p class="govuk-body-l govuk-!-margin-bottom-0">Complete your monthly performance returns for governance reporting.</p>
+                    <span class="govuk-caption-l govuk-!-margin-top-8">COMPASS reporting</span>
+                    <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">Performance reporting - @ViewBag.Month @ViewBag.Year</h1>
                     
                     <table class="govuk-table govuk-!-margin-top-6">
                         <thead class="govuk-table__head">
